--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "12.2.3",
     "next-translate": "^1.5.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-svg": "^15.1.8"
   },
   "devDependencies": {
     "@types/node": "18.6.3",
