--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-translate": "^1.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-slideshow-image": "^4.0.5",
     "react-svg": "^15.1.8"
   },
   "devDependencies": {
